# ansible-role-rsd

./: .github_changelog_generator  .gitignore  .gitlab-ci.yml  .yamllint  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HISTORY.md  LICENSE.md  README.md  VERSION  poetry.lock.license  pyproject.toml  requirements.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.github/workflows/prepare-action/: action.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  dhparam.pem  molecule.yml  prepare.yml  test.key  test.key.license  test.pem  verify.yml
tasks/: check.yml  install.yml  main.yml
templates/: Caddyfile.j2  docker-compose.yml  docker-compose.yml.j2  nginx.conf.j2  rsd-secrets.env.j2
