# SPDX-FileCopyrightText: 2022 Helmholtz Centre for Environmental Research (UFZ)
# SPDX-FileCopyrightText: 2022 Helmholtz-Zentrum Dresden - Rossendorf (HZDR)
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "rsd"
version = "1.4.0"
description = "This role provides a setup for the Research Software Directory."
authors = ["Tobias Huste <t.huste@hzdr.de>", "Norman Ziegner <norman.ziegner@ufz.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.0.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.8.7"
yamllint = "^1.28.0"
reuse = "^1.0.0"
molecule = {version = "^4.0.3", extras = ["podman"]}
molecule-podman = "^2.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
